KNOX-3162 - Build support for JDK 17 (#1114)
* Update Knox to JDK 17

* Fix issues with SecureKnoxShellTest

* KNOX-3216: Upgrade Spring to 6.x (#1109)

* KNOX-3217: fix TestHashicorpVaultAliasService test failures. (spring vault library needs to be upgraded to 3.2.0 that is compatible with Spring 6.2). Removed spring-vault-dependencies as it is unavailable since 3.0+. Added httpclient and httpcore libraries to managed dependencies as these were taken from spring-vault-dependencies now. Removed duplicated dependencies from gateway pom.xml

---------

Co-authored-by: Sandeep Moré <moresandeep@gmail.com>
Co-authored-by: Phil Zampino <pzampino@apache.org>
Co-authored-by: bonampak <14160522+bonampak@users.noreply.github.com>